# engram-lite

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS_SUMMARY.md  README.md  build.rs  mkdocs.yml  mock.md  progress.md  prototype.py  research.md  review.md  todo.md
.github/workflows/: ci.yml  rust.yml
_speculative/: architecture.md  mastra-report.md  mermaid-diagrams.md  pydantic-ai-report.md  runtime-research.md  zep-graphiti.md
docs/: README.md  index.md
docs/about/: contributing.md  index.md  license.md  roadmap.md
docs/design/: data-model.md  graph-engine.md  index.md  indexing.md  memory-management.md  storage.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/usage/: api.md  cli.md  index.md  tui.md
examples/: python_demo.py
examples/grpc/: README.md  client.py  client.rs
linfa-check/: Cargo.toml
llms-txt/: agents-llms.txt  cf-remote-mcp.txt  llms-ctx.txt  mcp-full-llms.txt
proto/: engram.proto
specs/: wasm-runtime.md
src/: benchmark.rs  dimension_reduction.rs  embedding.rs  error.rs  export.rs  graph.rs  graph_test.rs  index.rs  index_test.rs  lib.rs  main.rs  python.rs  query.rs  schema.rs  schema_test.rs  storage.rs  utils.rs  vector_search.rs
src/demo/: mod.rs
src/grpc/: conversion.rs  error.rs  mod.rs  server.rs  service.rs
templates/: agents.html  api-docs.html  collection-detail.html  collections.html  connections.html  engrams.html  graph.html  index.html
tests/: README.md  embedding_test.rs  engram_test.rs  graph_test.rs  memory_indices_test.rs  memory_test.rs  schema_test.rs  storage_test.rs  vector_search_test.rs
