[package]
name = "engram-lite"
version = "0.1.0"
edition = "2021"
description = "A memory graph storage system for AI agents"
authors = ["EngramAI Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rocksdb = "0.21.0"
thiserror = "1.0.52"
petgraph = "0.6.4"
dirs = "5.0.1"

# TUI implementation
ratatui = "0.29.0"
crossterm = "0.27.0"

# For future web server implementation
# actix-web = "4.4.0"
# actix-files = "0.6.2"
# tera = "1.19.1"

# Specify the only binary we want
[[bin]]
name = "engramlt"
path = "src/bin/engramlt.rs"
