workspace = { members = ["linfa-check"] }
[package]
name = "engram-lite"
version = "0.3.0"
edition = "2021"
description = "A memory graph storage system for AI agents"
authors = ["EngramAI Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rocksdb = "0.21.0"
thiserror = "1.0.52"
petgraph = "0.6.4"
dirs = "5.0.1"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
rand_xoshiro = "0.6.0"
tempfile = "3.10.0"
pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
ndarray = "0.15.6"
sprs = "0.11.1"
linfa = "0.7.1"
linfa-reduction = "0.7.1"
linfa-kernel = "0.7.1"
tonic = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "io-util", "net", "time"] }
tower = "0.4.13"
futures = "0.3.30"
async-trait = "0.1.77"
bytes = "1.5.0"
hyper = "0.14.28"
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.27.0", optional = true }

[features]
default = []
benchmark = []
python = ["pyo3"]
grpc = []
tui = ["ratatui", "crossterm"]

[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.3"

[lib]
name = "engram_lite"
crate-type = ["rlib", "cdylib"]

# For future web server implementation
# actix-web = "4.4.0"
# actix-files = "0.6.2"
# tera = "1.19.1"

# Specify the only binary we want
[[bin]]
name = "engramlt"
path = "src/bin/engramlt.rs"
